--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=InternetShopService;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=InternetShopService;Username=postgres;Password=123"
   },
   "JwtSettings": {
     "SecretKey": "YourSuperSecretKeyThatShouldBeAtLeast32CharactersLong!",
