Добавлены звонки CartService, ConractorsGroupService

--- a/appsettings.json
+++ b/appsettings.json
@@ -22,5 +22,18 @@
   "Sms": {
     "Provider": "Mock",
     "ApiKey": ""
+  },
+  "ZvonokAPI": {
+    "PublicKey": "9447a87f0c53794d8c005764cb2c0161",
+    "AddFlashCallUrl": "https://zvonok.com/api",
+    "CampaignId": "344720527"
+  },
+  "CallsConfiguration": {
+    "Provider": "zvonokapi"
+  },
+  "AuthSettings": {
+    "MaxLoginAttempts": 3,
+    "LockoutHours": 3,
+    "CodeExpirationMinutes": 30
   }
 }
