авторизация по звонку отлажена. контрагентов по grpc мы получаем

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,8 +16,12 @@
     "ExpirationMinutes": 60
   },
   "FimBiz": {
-    "GrpcEndpoint": "http://localhost:5000",
-    "ApiKey": "your-api-key-here"
+    "GrpcEndpoint": "https://tdapi.fimbiz.ru",
+    "ApiKey": "x5A7vP9q2RcT1mKbN8sF3jH6gLzQwXyV4dE0nCtJrMpU",
+    "CompanyId": 0,
+    "OrganizationId": 0,
+    "EnableAutoSync": true,
+    "SyncIntervalMinutes": 60
   },
   "Sms": {
     "Provider": "Mock",
@@ -25,7 +29,7 @@
   },
   "ZvonokAPI": {
     "PublicKey": "9447a87f0c53794d8c005764cb2c0161",
-    "AddFlashCallUrl": "https://zvonok.com/api",
+    "AddFlashCallUrl": "https://zvonok.com/manager/cabapi_external/api/v1",
     "CampaignId": "344720527"
   },
   "CallsConfiguration": {
