добавил прото файл расширил сущность заказ

--- a/InternetShopService_back.csproj
+++ b/InternetShopService_back.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\contractor_sync.proto" GrpcServices="Both" />
+    <Protobuf Include="Protos\order_sync.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
