Добавлена служба авто отправки неотправленных заказов

--- a/appsettings.json
+++ b/appsettings.json
@@ -21,7 +21,9 @@
     "CompanyId": 0,
     "OrganizationId": 0,
     "EnableAutoSync": true,
-    "SyncIntervalMinutes": 60
+    "SyncIntervalMinutes": 60,
+    "OrderSyncIntervalMinutes": 5,
+    "OrderSyncBatchSize": 100
   },
   "Sms": {
     "Provider": "Mock",
