Добавлена возможность прикрепления файлов к заказам

--- a/appsettings.json
+++ b/appsettings.json
@@ -41,5 +41,11 @@
     "MaxLoginAttempts": 3,
     "LockoutHours": 3,
     "CodeExpirationMinutes": 30
+  },
+  "AppSettings": {
+    "BaseUrl": "https://testapi.fimbiz.ru",
+    "PublicUrl": "https://tdapi.fimbiz.ru",
+    "UploadsPath": "wwwroot/uploads/orders",
+    "FilesPath": "wwwroot/uploads/orders"
   }
 }
