--- a/appsettings.json
+++ b/appsettings.json
@@ -43,8 +43,8 @@
     "CodeExpirationMinutes": 30
   },
   "AppSettings": {
-    "BaseUrl": "https://testapi.fimbiz.ru",
-    "PublicUrl": "https://tdapi.fimbiz.ru",
+    "BaseUrl": "https://test.fimbiz.ru",
+    "PublicUrl": "https://test.fimbiz.ru",
     "UploadsPath": "wwwroot/uploads/orders",
     "FilesPath": "wwwroot/uploads/orders"
   }
